sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: not found: value l
  l=getValueCount()
  ^AlgBubbleSort1:8: error: not found: value l
    for (i <- 0 to l-2){
                   ^